# MEngineV3

./: CMakeLists.txt  CMakePresets.json  README.md  ResourceManager.excalidraw  UML.md  UML.puml  vcpkg.json
Common/: CMakeLists.txt
Common/include/: Configure.hpp  IConfigure.hpp  ILogger.hpp  Logger.hpp  Spdlogger.hpp  Type.hpp
Common/src/: Configure.cpp  Logger.cpp  Spdlogger.cpp
Core/: CMakeLists.txt
Core/Asset/: CMakeLists.txt
Core/Asset/include/: Asset.hpp  GraphicPipeline.hpp  Pipeline.hpp  PipelineLayout.hpp  Shader.hpp  Vertex.hpp
Core/Builder/: CMakeLists.txt
Core/Builder/include/: Builder.hpp  CustomGraphicPipelineBuilder.hpp  GBufferPipelineBuilder.hpp  GraphicPipelineBuilder.hpp  GraphicPipelineDirector.hpp  IBuilder.hpp  ICustomGraphicPipelineBuilder.hpp  IGraphicPipelineBuilder.hpp  IPipelineLayoutBuilder.hpp  IShaderBuilder.hpp  PBRPipelineLayoutBuilder.hpp  PipelineLayoutBuilder.hpp  PipelineLayoutDirector.hpp  ShaderBuilder.hpp
Core/Builder/src/: CustomGraphicPipelineBuilder.cpp  GBufferPipelineBuilder.cpp  GraphicPipelineBuilder.cpp  GraphicPipelineDirector.cpp  PBRPipelineLayoutBuilder.cpp  PipelineLayoutBuilder.cpp  PipelineLayoutDirector.cpp  ShaderBuilder.cpp
Core/Enums/: CMakeLists.txt
Core/Enums/include/: RenderPassType.hpp
Core/Graphic/: CMakeLists.txt
Core/MAsset/: CMakeLists.txt
Core/MAsset/include/: Asset.hpp  ComputePipeline.hpp  GraphicPipeline.hpp  MAsset.hpp  MAssetSetting.hpp  MFolder.hpp  MFolderSetting.hpp  MMaterial.hpp  MMesh.hpp  MModel.hpp  MPBRMaterial.hpp  MPipeline.hpp  MPipelineSetting.hpp  MTexture.hpp  MTextureSetting.hpp  Pipeline.hpp  PipelineLayout.hpp  Shader.hpp  Vertex.hpp
Core/MAsset/src/: Vertex.cpp
Core/MManager/: CMakeLists.txt
Core/MManager/include/: GraphicPipelineManager.hpp  IGraphicPipelineManager.hpp  IMFolderManager.hpp  IMManager.hpp  IMMaterialManager.hpp  IMMeshManager.hpp  IMModelManager.hpp  IMPBRMaterialManager.hpp  IMPipelineManager.hpp  IMTextureManager.hpp  IManager.hpp  IPipelineLayoutManager.hpp  MFolderManager.hpp  MManager.hpp  MManager_fwd.hpp  MMaterialManager.hpp  MMeshManager.hpp  MModelManager.hpp  MPBRMaterialManager.hpp  MPipelineManager.hpp  MTextureManager.hpp  PipelineLayoutManager.hpp  RenderPassManager.hpp  ShaderManager.hpp
Core/MManager/src/: MFolderManager.cpp  MMeshManager.cpp  MModelManager.cpp  MPBRMaterialManager.cpp  MPipelineManager.cpp  MTextureManager.cpp  PipelineLayoutManager.cpp  RenderPassManager.cpp  ShaderManager.cpp
Core/MThread/: CMakeLists.txt
Core/MThread/include/: IMThread.hpp  MRenderThread.hpp
Core/MThread/src/: MRenderThread.cpp
Core/Manager/: CMakeLists.txt
Core/Manager/include/: IShaderManager.hpp  Manager.hpp  RenderPassManager.hpp
Core/Manager/src/: GraphicPipelineManager.cpp
Core/Math/: CMakeLists.txt
Core/Math/include/: Math.hpp
Core/Thread/: CMakeLists.txt
Core/Thread/include/: IMThread.hpp  TaskManager.hpp
Core/Thread/src/: MRenderThread.cpp  TaskManager.cpp
Core/UUID/: CMakeLists.txt
Core/UUID/include/: IUUIDGenerator.hpp  UUID.hpp  UUIDGenerator.hpp
Core/UUID/src/: UUID.cpp  UUIDGenerator.cpp
Core/Utils/: CMakeLists.txt
Core/Utils/include/: ImageUtil.hpp  ShaderUtils.hpp
Core/Utils/src/: ImageUtil.cpp  ShaderUtils.cpp
Function/: CMakeLists.txt
Function/MComponent/: CMakeLists.txt
Function/MComponent/include/: MCameraComponent.hpp  MComponent.hpp  MLightComponent.hpp  MMaterialComponent.hpp  MMeshComponent.hpp  MTextureComponent.hpp  MTransformComponent.hpp
Function/MSystem/: CMakeLists.txt
Function/MSystem/include/: IMSystem.hpp  MCameraSystem.hpp  MRenderSystem.hpp  MSystem.hpp  MTransformSystem.hpp
Function/MSystem/src/: MCameraSystem.cpp  MRenderSystem.cpp  MTransformSystem.cpp
Function/Utils/: CMakeLists.txt
Function/Utils/include/: EntityUtils.hpp
Function/Utils/src/: EntityUtils.cpp
Platform/: CMakeLists.txt
Platform/include/: VulkanContext.hpp
Platform/src/: VulkanContext.cpp
Resource/: CMakeLists.txt  appsettings.json
Resource/Assets/: Cube.pbrmaterial  PBR.shader  cubeCir.fbx
Resource/Assets/Shaders/: ForwardOpaquePBR.frag  ForwardOpaquePBR.vert  ForwardPBR.frag  ForwardPBR.vert  default.frag  default.vert
Resource/Engine/: BowArrow.fbx
Resource/Engine/Shaders/: ForwardOpaquePBR.frag
Resource/include/: Reflect.hpp  ResourceManager.hpp  ResourceURL.hpp  Serialize.hpp
Resource/src/: ResourceManager.cpp
Test/: CMakeLists.txt
Test/Common/: CMakeLists.txt  ConfigureTest.cpp  LoggerTest.cpp  TypeTest.cpp
Test/Core/: CMakeLists.txt  ConcurrentqueueTest.cpp  ImageUtilsTest.cpp  ReflTest.cpp  RenderThreadTest.cpp  SerializeTest.cpp  TestTest.cpp  Texture2DTest.cpp  UUIDTest.cpp
Test/Function/: AlignTest.cpp  CMakeLists.txt  RenderSystemTest.cpp
Test/Platform/: CMakeLists.txt  VulkanContextTest.cpp
Test/Resource/: CMakeLists.txt
Test/Tool/: AssetDatabaseTest.cpp  CMakeLists.txt
Tool/: CMakeLists.txt
Tool/Editor/: CMakeLists.txt
Tool/Editor/include/: AssetDatabase.hpp  EditorSerialize.hpp  MEngineEditor.hpp  Reflect.hpp  Serialize.hpp
Tool/Editor/src/: AssetDatabase.cpp  EditorEntry.cpp  MEngineEditor.cpp
Tool/entry/: EditorEntry.cpp
Tool/include/Editor/: MEngineEditor.hpp
Tool/src/Editor/: MEngineEditor.cpp
