file(GLOB_RECURSE RESOURCE  ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
set_source_files_properties(${SOURCE_FILES} PROPERTIES CMAKE_CONFIGURE_DEPENDS ON)
find_package(glfw3 CONFIG REQUIRED)
find_path(BEXT_DI_INCLUDE_DIRS "boost/di.hpp")
find_package(imgui CONFIG REQUIRED)
find_package(imguizmo CONFIG REQUIRED)
add_executable(EditorEntry ${RESOURCE} entry/EditorEntry.cpp)
target_include_directories(EditorEntry PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(EditorEntry PUBLIC Core)
target_link_libraries(EditorEntry PUBLIC glfw)
target_include_directories(EditorEntry PUBLIC ${BEXT_DI_INCLUDE_DIRS})
target_link_libraries(EditorEntry PUBLIC imgui::imgui)
target_link_libraries(EditorEntry PRIVATE imguizmo::imguizmo)
