file(GLOB_RECURSE RESOURCE  ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
set_source_files_properties(${SOURCE_FILES} PROPERTIES CMAKE_CONFIGURE_DEPENDS ON)
find_package(glfw3 CONFIG REQUIRED)
find_path(BEXT_DI_INCLUDE_DIRS "boost/di.hpp")
find_package(imgui CONFIG REQUIRED)
find_package(imguizmo CONFIG REQUIRED)
add_executable(Editor ${RESOURCE})

target_link_libraries(Editor PUBLIC Resource)
target_include_directories(Editor PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(Editor PUBLIC Resource)
target_link_libraries(Editor PUBLIC glfw)
target_include_directories(Editor PUBLIC ${BEXT_DI_INCLUDE_DIRS})
target_link_libraries(Editor PUBLIC imgui::imgui)
target_link_libraries(Editor PRIVATE imguizmo::imguizmo)